--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,5 +1,5 @@
 [versions]
-agp = "8.4.0"
+agp = "8.4.1"
 kotlin = "1.9.0"
 coreKtx = "1.13.1"
 mockito = "2.2.0"
@@ -19,16 +19,16 @@ glide = "4.15.1"
 shimmer = "0.5.0"
 retrofit = "2.9.0"
 interceptor = "4.9.1"
-hilt = "2.48.1"
-hilt-lifecycle = "1.0.0-alpha03"
-hilt-work = "1.2.0"
+hilt = "2.49"
 splashscreen = "1.0.1"
+amshoveKluent = "1.73"
 
 
 [libraries]
 androidx-core-ktx = { group = "androidx.core", name = "core-ktx", version.ref = "coreKtx" }
 mockito = { group = "com.nhaarman.mockitokotlin2", name = "mockito-kotlin", version.ref = "mockito" }
 mockito-inline = { group = "org.mockito", name = "mockito-inline", version.ref = "mockito-inline" }
+amshove-kluent = { group = "org.amshove.kluent", name = "kluent-android", version.ref = "amshoveKluent" }
 junit = { group = "junit", name = "junit", version.ref = "junit" }
 androidx-junit = { group = "androidx.test.ext", name = "junit", version.ref = "junitVersion" }
 androidx-espresso-core = { group = "androidx.test.espresso", name = "espresso-core", version.ref = "espressoCore" }
@@ -56,14 +56,10 @@ squareup-interceptor = { group = "com.squareup.okhttp3", name = "logging-interce
 hilt-android = { group = "com.google.dagger", name = "hilt-android", version.ref = "hilt" }
 hilt-android-compiler = { group = "com.google.dagger", name = "hilt-android-compiler", version.ref = "hilt" }
 hilt-plugin = { group = "com.google.dagger", name = "hilt-android-gradle-plugin", version.ref = "hilt"}
-hilt-lifecycle = { group = "androidx.hilt", name = "hilt-lifecycle-viewmodel", version.ref = "hilt-lifecycle"}
-hilt-work = { group = "androidx.hilt", name = "hilt-work", version.ref = "hilt-work"}
 
 splashscreen = { group = "androidx.core", name = "core-splashscreen", version.ref = "splashscreen"}
 
 [plugins]
 android-application = { id = "com.android.application", version.ref = "agp" }
 kotlin-android = { id = "org.jetbrains.kotlin.android", version.ref = "kotlin" }
-navigation-safe-args = { id = "androidx.navigation.safeargs.kotlin", version.ref = "navigation" }
-hilt-android = { id = "com.google.dagger.hilt.android", version.ref = "hilt" }
 
