--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -15,7 +15,7 @@ recyclerview = "1.3.2"
 lifecycle-extensions = "2.2.0"
 lifecycle-viewmodel = "2.8.0"
 navigation = "2.7.7"
-glide = "4.15.1"
+lottie = "5.0.3"
 shimmer = "0.5.0"
 retrofit = "2.9.0"
 interceptor = "4.9.1"
@@ -45,7 +45,7 @@ androidx-navigation-fragment = { group = "androidx.navigation", name = "navigati
 androidx-navigation-ui = { group = "androidx.navigation", name = "navigation-ui-ktx", version.ref = "navigation"}
 androidx-navigation-safeArgs = { group = "androidx.navigation", name = "navigation-safe-args-gradle-plugin", version.ref = "navigation"}
 
-glide = { group = "com.github.bumptech.glide", name = "glide", version.ref = "glide"}
+lottie = { group = "com.airbnb.android", name = "lottie", version.ref = "lottie"}
 
 shimmer = { group = "com.facebook.shimmer", name = "shimmer", version.ref = "shimmer"}
 
